# EcoCode

./: .gitignore  README.md
ecocode/: .gitignore  Cargo.toml  compare.py  ecocodeDB.db-shm  ecocodeDB.db-wal  energy_log.csv  energy_log2.csv  model.csv  pytorch_energy.csv  pytorch_energy2.csv  script.py  test.db3  test.json
ecocode/src/: main.rs
ecocode/src/exporter/: csv.rs  json.rs  local.rs  mod.rs  online.rs  prometheus.rs  sqlite.rs  terminal.rs
ecocode/src/sensor/: cpu.rs  energy.rs  gpu.rs  mod.rs  rapl.rs
web/backend/: Cargo.toml
web/backend/src/: main.rs
web/frontend/app/: globals.css  page.tsx
web/frontend/app/api/improvements/: route.ts
web/frontend/app/projects/: page.tsx
web/frontend/app/projects/[id]/: page.tsx
web/frontend/app/runs/[id]/: page.tsx
web/frontend/components/: DashboardLayout.tsx  EnergyBreakdownChart.tsx  EnergyChart.tsx  MetricCard.tsx  ProjectsTable.tsx  RecentRunsTable.tsx  RunSystemInfo.tsx  Sidebar.tsx  UtilizationChart.tsx
web/frontend/hooks/: use-sse.ts
web/frontend/lib/: api-client.ts  mock-data.ts
webapp/app/: globals.css  layout.tsx
webapp/app/api/runs/: route.ts
webapp/app/api/runs/[id]/: route.ts
webapp/app/runs/: page.tsx
webapp/components/: RecentRunsTable.tsx  RunSystemInfo.tsx  RunsTable.tsx
