[package]
name = "ecocode"
version = "0.1.0"
edition = "2024"
description = "EcoCode is a system to analyze your code energy and cost efficiency."


[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
csv = "1.4.0"
nvml-wrapper = "0.11.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = {version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.0"
prometheus = "0.13.4"
warp = "0.3.7"
tokio = { version = "1.43.0", features = ["full"] }