[package]
name = "ecocode"
version = "0.1.0"
edition = "2024"
description = "EcoCode is a system to analyze your code energy and cost efficiency."


[dependencies]
async-trait = "0.1.89"
clap = { version = "4.5.56", features = ["derive"] }
csv = "1.4.0"
dotenv = "0.14.1"
nvml-wrapper = "0.11.0"
prometheus = "0.14.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "sqlite",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
] }
sysinfo = "0.38.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
warp = { version = "0.4.2", features = ["server"] }
