[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
axum-extra = "0.12.5"
dotenv = "0.15.0"
futures = "0.3.32"
futures-util = "0.3.32"
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "macros", "runtime-tokio-rustls"] }
tokio = {version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.2", features = ["cors"] }